--- a/templates/ingress/ingress.yaml
+++ b/templates/ingress/ingress.yaml
@@ -42,6 +42,8 @@ metadata:
 {{ toYaml $ingress.annotations | indent 4 }}
 {{- if .Values.internalTLS.enabled }}
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    # Required for older nginx-ingress versions
+    nginx.ingress.kubernetes.io/secure-backends: 'true'
 {{- end }}
 {{- if eq .Values.expose.ingress.controller "ncp" }}
     ncp/use-regex: "true"
