Enable authentication for internal redis
Add a `redis.internal.password` configuration option to values.yaml
and use it to enable authentication for the internal redis service.

Signed-off-by: Stefan Nica <snica@suse.com>

--- a/values.yaml
+++ b/values.yaml
@@ -716,6 +716,8 @@ redis:
     image:
       repository: goharbor/redis-photon
       tag: v2.1.1
+    # The password for internal redis.
+    password: "changeit"
     # resources:
     #  requests:
     #    memory: 256Mi
