--- a/templates/database/database-ss.yaml
+++ b/templates/database/database-ss.yaml
@@ -72,9 +72,12 @@ spec:
         resources:
 {{ toYaml .Values.database.internal.resources | indent 10 }}
 {{- end }}
-        envFrom:
-          - secretRef:
-              name: "{{ template "harbor.database" . }}"
+        env:
+          - name: POSTGRES_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: "{{ template "harbor.database" . }}"
+                key: POSTGRES_PASSWORD
         volumeMounts:
         - name: database-data
           mountPath: /var/lib/postgresql/data
