--- a/templates/database/database-ss.yaml
+++ b/templates/database/database-ss.yaml
@@ -32,6 +32,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      automountServiceAccountToken: false
       initContainers:
       - name: "change-permission-of-directory"
         securityContext:
