--- a/templates/notary/notary-server.yaml
+++ b/templates/notary/notary-server.yaml
@@ -34,6 +34,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      automountServiceAccountToken: false
       initContainers:
       - name: "inject-config-db-url"
         securityContext:
