--- a/templates/core/core-secret.yaml
+++ b/templates/core/core-secret.yaml
@@ -44,7 +44,8 @@ data:
   CSRF_KEY: {{ .Values.core.xsrfKey | default (randAlphaNum 32) | b64enc | quote }}
 {{- end }}
 {{- if not .Values.core.secretName }}
-  tls.crt: {{ .Files.Get "cert/tls.crt" | b64enc }}
-  tls.key: {{ .Files.Get "cert/tls.key" | b64enc }}
+  {{- $cert := genSelfSignedCert "harbor" nil nil 365 }}
+  {{- $certCtx := (merge (dict "ca" nil "cert" $cert "secret" $secret "rotateCert" .Values.core.rotateCert ) .) }}
+{{ include "harbor.getGenCertOrLoadFromSecret" $certCtx | indent 2 }}
 {{- end }}
   REGISTRY_CREDENTIAL_PASSWORD: {{ .Values.registry.credentials.password | b64enc | quote }}
